--- a/index.html
+++ b/index.html
@@ -33,35 +33,45 @@
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Фильмы, Сериалы, Мультики</h3>
         <p class="flex-1">Создание контента с помощью ИИ для ускорения производства.</p>
-        <div class="mt-4 bg-gray-200 h-40 flex items-center justify-center rounded-xl">Видео-заглушка</div>
+        <img src="assets/film.jpg" alt="Фильмы, Сериалы, Мультики" 
+     class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
+
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
       </div>
       
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Маркетинг</h3>
         <p class="flex-1">Креативные рекламные ролики и автоматизация процессов.</p>
-        <div class="mt-4 bg-gray-200 h-40 flex items-center justify-center rounded-xl">Видео-заглушка</div>
+        <img src="assets/marketing.jpg" alt="Маркетинг" 
+     class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
+
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
       </div>
 
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Обучение ИИ</h3>
         <p class="flex-1">Развитие навыков и повышение производительности через обучение ИИ.</p>
-        <div class="mt-4 bg-gray-200 h-40 flex items-center justify-center rounded-xl">Видео-заглушка</div>
+        <img src="assets/education.jpg" alt="Обучение ИИ" 
+     class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
+
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
       </div>
 
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Блогинг</h3>
         <p class="flex-1">Уникальный контент и привлечение аудитории с виртуальными блогерами.</p>
-        <div class="mt-4 bg-gray-200 h-40 flex items-center justify-center rounded-xl">Видео-заглушка</div>
+        <img src="assets/blogging.jpg" alt="Блогинг" 
+     class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
+
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
       </div>
 
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">ИИ Ведущий Новостей</h3>
         <p class="flex-1">Цифровизация медиа и инновационный подход к новостям.</p>
-        <div class="mt-4 bg-gray-200 h-40 flex items-center justify-center rounded-xl">Видео-заглушка</div>
+        <img src="assets/news.jpg" alt="ИИ Ведущий Новостей" 
+     class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
+
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
       </div>
     </div>
