--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Фильмы, Сериалы, Мультики</h3>
         <p class="flex-1">Создание контента с помощью ИИ для ускорения производства.</p>
-        <img src="assets/film.jpg" alt="Фильмы, Сериалы, Мультики" 
+        <img src="assets/film.jpg.jpg" alt="Фильмы, Сериалы, Мультики" 
      class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
 
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
@@ -42,7 +42,7 @@
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Маркетинг</h3>
         <p class="flex-1">Креативные рекламные ролики и автоматизация процессов.</p>
-        <img src="assets/marketing.jpg" alt="Маркетинг" 
+        <img src="assets/marketing.jpg.jpg" alt="Маркетинг" 
      class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
 
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
@@ -51,7 +51,7 @@
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Обучение ИИ</h3>
         <p class="flex-1">Развитие навыков и повышение производительности через обучение ИИ.</p>
-        <img src="assets/education.jpg" alt="Обучение ИИ" 
+        <img src="assets/education.jpg.jpg" alt="Обучение ИИ" 
      class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
 
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
@@ -60,7 +60,7 @@
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">Блогинг</h3>
         <p class="flex-1">Уникальный контент и привлечение аудитории с виртуальными блогерами.</p>
-        <img src="assets/blogging.jpg" alt="Блогинг" 
+        <img src="assets/blogging.jpg.jpg" alt="Блогинг" 
      class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
 
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
@@ -69,7 +69,7 @@
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
         <h3 class="text-xl font-semibold mb-3">ИИ Ведущий Новостей</h3>
         <p class="flex-1">Цифровизация медиа и инновационный подход к новостям.</p>
-        <img src="assets/news.jpg" alt="ИИ Ведущий Новостей" 
+        <img src="assets/news.jpg.jpg" alt="ИИ Ведущий Новостей" 
      class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
 
         <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
