--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
         <img src="assets/film.jpg.jpg" alt="Фильмы, Сериалы, Мультики" 
      class="mt-4 w-full rounded-xl max-h-60 object-cover" loading="lazy">
 
-        <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded-xl hover:bg-red-700">Скачать КП</a>
+        <a href="assets/komercheskoe-predlozhenie.pdf" 
+   class="bg-red-600 text-white px-4 py-2 rounded-xl" 
+   download>
+   Скачать КП
+</a>
+
       </div>
       
       <div class="bg-white rounded-2xl shadow p-6 flex flex-col justify-between">
